# klaussy-repo-conventions

./: README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: agent-context-improvement-plan.md
examples/fastapi/: CLAUDE.md  conventions-review.md  conventions.html  conventions.md  conventions.raw.json  conventions.sarif
examples/fastapi/.claude/: directory-map.md
examples/fastapi/.claude/rules/: docs_src-sql_databases.md  fastapi.md  scripts.md  tests.md
examples/httpx/: CLAUDE.md  conventions-review.md  conventions.html  conventions.md  conventions.raw.json  conventions.sarif
examples/httpx/.claude/: directory-map.md
examples/httpx/.claude/rules/: httpx.md  tests.md
scripts/: regen-examples.sh
src/conventions/: __init__.py  cli.py  report.py  schemas.py
src/conventions/detectors/: base.py  orchestrator.py
src/conventions/detectors/generic/: __init__.py  history.py  repo_layout.py
src/conventions/detectors/python/: data_flow.py  index.py  security.py
src/conventions/outputs/: claude.py  html.py  sarif.py
tests/: conftest.py
tests/detectors/: test_dependency_health.py  test_go_data_flow.py  test_graph.py  test_history.py  test_node_data_flow.py  test_python_data_flow.py  test_python_security.py  test_python_typing.py  test_repo_layout_enhanced.py  test_rust_data_flow.py
tests/fixtures/: python_pytest.py  python_typed.py
tests/integration/: test_claude_output.py  test_cli.py  test_reports.py
tests/unit/: test_claude_output.py  test_config.py  test_orchestrator.py  test_ratings.py  test_schemas.py
